# supplier

./: .env.sample  README.MD  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_supplier.py  0003_supplier_supplier_product.py  0004_alter_supplier_supplier.py  0005_delivery.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  no_rights.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
